--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "d3": "^7.8.5",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
+    "react-d3-treemap": "^1.0.29",
     "react-dom": "^18.2.0",
-    "react-google-charts": "^4.0.1"
+    "react-google-charts": "^4.0.1",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
