--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "countries-list": "^3.0.6",
     "d3": "^7.8.5",
     "framer-motion": "^11.0.3",
+    "geojson": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
